[tool.poetry]
name = "otel"
version = "0.1.0"
description = ""
authors = ["Guangya Liu <gyliu@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-instrumentation-requests = "^0.41b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
