[project]
name = "fastmcp-auth-reference"
version = "0.1.0"
description = "FastMCP Auth Reference Implementation"
requires-python = ">=3.10"
authors = [
    {name = "FastMCP Example", email = "example@fastmcp.com"}
]
dependencies = [
    "fastmcp==2.10.1",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
server = ["fastmcp", "PyJWT"]
client = ["fastmcp", "httpx", "requests", "asyncio", "PyJWT", "pydantic"]
dev = ["fastmcp", "httpx", "requests", "asyncio", "PyJWT", "pydantic"]

[tool.uv]
# This section can be used by uv for dependency management 