[project]
name = "langgraph-agentic-workflow"
version = "0.1.0"
description = "LangGraph agentic workflow implementation with Gemini model"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain-google-genai",
    "langchain-core",
    "langchain-community",
    "python-dotenv",
    "langchain-tavily",
    "ipython",
]

[tool.uv]
dev-dependencies = []
